@@ -1,8 +1,17 @@
 2003-02-04  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
+	* field.h: Remove superfluous constructor.
+	* field.cpp: Ditto.
+	* S_scheme_fields.cpp: Ditto.
+	* bloch.cpp: Ditto.
+	* stack.cpp: Ditto.
+	* waveguide.cpp: Ditto.
+
+2003-02-04  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
 	* cavity.h: add eps_at, mu_at, n_at.
 	* cavity.cpp: Ditto.
-	* camfr_wrpa.cpp: Ditto.
+	* camfr_wrap.cpp: Ditto.
 
 2003-02-04  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
